проверка по 2м каналам

--- a/telpbot.ini
+++ b/telpbot.ini
@@ -4,4 +4,12 @@ api_id=000000
 api_hash=
 phone_number=+71111234567
 [chat]
-name=somechannel
+count=2
+name1=btc2themoon
+name2=Raketat8
+[aim]
+count=2
+source_regexp1=(?P<url>http?://telegra.ph/[^\s()]+)
+source_regexp2=(?P<url>http?://raketa8.ru/c[^\s()]+)
+aim_selector1=a[href^="http://raketa8.ru/c"]
+aim_selector2=a[href^="https://telegram.me/"]
